--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
 <div class="container my-5">
-    <pre id="">
+    <pre class="overflow-hidden">
         <table class="table table-striped text-center">
             <thead class="thead-dark">
               <tr>
